--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ input.bar {width:100px;font-family:monospace;font-size:24px;}
 <body>
 
 <div id="result" align="center">
-	数字を入力してよ
+	数字を入力してよね
 </div>
 
 <div id="cc" align="center">
