--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 table {border:0px;margin:0 auto;border-collapse:collapse;}
 div#cc {text-align:center;}
 div#result {text-align:center;font-size:40px;}
-input#tx1 {font-family:monospace;font-size:40px;}
-input.key {width:50px;font-family:monospace;font-size:40px;}
-input.non {width:50px;font-family:monospace;font-size:40px;visibility:hidden;}
-input.bar {width:100px;font-family:monospace;font-size:40px;}
+input#tx1 {text-align:center;font-family:monospace;font-size:40px;}
+input.key {text-align:center;width:50px;font-family:monospace;font-size:40px;}
+input.non {text-align:center;width:50px;font-family:monospace;font-size:40px;visibility:hidden;}
+input.bar {text-align:center;width:100px;font-family:monospace;font-size:40px;}
 // --></style>
 </head>
 
