--- a/index.html
+++ b/index.html
@@ -10,40 +10,50 @@
 table {border:0px;margin:0 auto;border-collapse:collapse;}
 div#cc {text-align:center;}
 div#result {text-align:center;font-size:40px;}
-input#tx1 {text-align:center;font-family:monospace;font-size:40px;}
-input.key {text-align:center;width:35px;font-family:monospace;font-size:40px;}
+div#number {text-align:center;font-size:40px;}
+form.myForm {visibility:hidden;}
+input.tx1 {font-family:monospace;font-size:40px;visibility:hidden;}
+input.key {text-align:center;width:100px;font-family:monospace;font-size:40px;}
 input.non {text-align:center;width:35px;font-family:monospace;font-size:40px;visibility:hidden;}
-input.bar {text-align:center;width:100px;font-family:monospace;font-size:40px;}
+input.bar {width:100px;font-family:monospace;font-size:40px;}
 // --></style>
 </head>
 
 <body>
 
-<div id="result">
-	数字を入力してよね
+<div id="result" >
+	数字を入力してよ
 </div>
 
-<div id="cc" align="center">
+<div id="number" >
+	-
+</div>
+
+<div id="cc">
 <form name="myForm" action="#">
+<div hidden>
 <input name="tx1" size=4 tabindex=1 maxlength=4 value=""><br>
+</div>
 <hr>
 <table><tr>
-	<td><input type="button" class="key" value="0" onClick="keyEvent('0')"></td>
-	<td><input type="button" class="key" value="1" onClick="keyEvent('1')"></td>
-	<td><input type="button" class="key" value="2" onClick="keyEvent('2')"></td>
-	<td><input type="button" class="key" value="3" onClick="keyEvent('3')"></td>
-	<td><input type="button" class="key" value="4" onClick="keyEvent('4')"></td>
+	<td><input type="button" class="key" value=" 7 " onClick="keyEvent('7')"></td>
+	<td><input type="button" class="key" value=" 8 " onClick="keyEvent('8')"></td>
+	<td><input type="button" class="key" value=" 9 " onClick="keyEvent('9')"></td>
 	</tr>
 	<tr>
-	<td><input type="button" class="key" value="5" onClick="keyEvent('5')"></td>
-	<td><input type="button" class="key" value="6" onClick="keyEvent('6')"></td>
-	<td><input type="button" class="key" value="7" onClick="keyEvent('7')"></td>
-	<td><input type="button" class="key" value="8" onClick="keyEvent('8')"></td>
-	<td><input type="button" class="key" value="9" onClick="keyEvent('9')"></td>
+	<td><input type="button" class="key" value=" 4 " onClick="keyEvent('4')"></td>
+	<td><input type="button" class="key" value=" 5 " onClick="keyEvent('5')"></td>
+	<td><input type="button" class="key" value=" 6 " onClick="keyEvent('6')"></td>
 	</tr>
 	<tr>
-	<td><input type="button" class="key" value="<" onClick="oneClear()"></td>
-	<td><input type="button" class="key" value="C" onClick="allClear()"></td>
+	<td><input type="button" class="key" value=" 1 " onClick="keyEvent('1')"></td>
+	<td><input type="button" class="key" value=" 2 " onClick="keyEvent('2')"></td>
+	<td><input type="button" class="key" value=" 3 " onClick="keyEvent('3')"></td>
+	</tr>
+	<tr>
+	<td><input type="button" class="key" value=" 0 " onClick="keyEvent('0')"></td>
+	<td><input type="button" class="key" value=" < " onClick="oneClear()"></td>
+	<td><input type="button" class="key" value=" C " onClick="allClear()"></td>
 </tr></table>
 
 </form>
@@ -52,19 +62,24 @@ input.bar {text-align:center;width:100px;font-family:monospace;font-size:40px;}
 <script type="text/javascript">
 var t=document.myForm.tx1;
 let changeDiv = document.getElementById('result')
+let changeNum = document.getElementById('number')
 
 function keyEvent(c) {
 	if(t.value.length == 4) allClear();
 	if(t.value.length < 4) t.value += c;
+	changeNum.innerHTML = t.value
 	if(t.value.length == 4) DispMessage(t.value);
 }
 
 function allClear() {
 	t.value = '';
+	changeNum.innerHTML = '-'
 }
 
 function oneClear() {
 	t.value = t.value.substring(0,t.value.length-1);
+	changeNum.innerHTML = t.value
+	if(t.value.length == 0) changeNum.innerHTML = '-'
 }
 
 function DispMessage(v) {
