--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ input.bar {width:100px;font-family:monospace;font-size:40px;}
 <body>
 
 <div id="result" >
-	数字を入力してよ
+	数字を入力してね
 </div>
 
 <div id="number" >
@@ -36,14 +36,14 @@ input.bar {width:100px;font-family:monospace;font-size:40px;}
 </div>
 <hr>
 <table><tr>
-	<td><input type="button" class="key" value=" 7 " onClick="keyEvent('7')"></td>
-	<td><input type="button" class="key" value=" 8 " onClick="keyEvent('8')"></td>
-	<td><input type="button" class="key" value=" 9 " onClick="keyEvent('9')"></td>
+	<td><input type="button" class="key" value=" 7 " ontouchend="keyEvent('7')"></td>
+	<td><input type="button" class="key" value=" 8 " ontouchend="keyEvent('8')"></td>
+	<td><input type="button" class="key" value=" 9 " ontouchend="keyEvent('9')"></td>
 	</tr>
 	<tr>
-	<td><input type="button" class="key" value=" 4 " onClick="keyEvent('4')"></td>
-	<td><input type="button" class="key" value=" 5 " onClick="keyEvent('5')"></td>
-	<td><input type="button" class="key" value=" 6 " onClick="keyEvent('6')"></td>
+	<td><input type="button" class="key" value=" 4 " ontouchend="keyEvent('4')"></td>
+	<td><input type="button" class="key" value=" 5 " ontouchend="keyEvent('5')"></td>
+	<td><input type="button" class="key" value=" 6 " ontouchend="keyEvent('6')"></td>
 	</tr>
 	<tr>
 	<td><input type="button" class="key" value=" 1 " onClick="keyEvent('1')"></td>
