--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@ input.bar {width:100px;font-family:monospace;font-size:40px;}
 	<td><input type="button" class="key" value=" 6 " ontouchend="keyEvent('6')"></td>
 	</tr>
 	<tr>
-	<td><input type="button" class="key" value=" 1 " onClick="keyEvent('1')"></td>
-	<td><input type="button" class="key" value=" 2 " onClick="keyEvent('2')"></td>
-	<td><input type="button" class="key" value=" 3 " onClick="keyEvent('3')"></td>
+	<td><input type="button" class="key" value=" 1 " ontouchend="keyEvent('1')"></td>
+	<td><input type="button" class="key" value=" 2 " ontouchend="keyEvent('2')"></td>
+	<td><input type="button" class="key" value=" 3 " ontouchend="keyEvent('3')"></td>
 	</tr>
 	<tr>
-	<td><input type="button" class="key" value=" 0 " onClick="keyEvent('0')"></td>
-	<td><input type="button" class="key" value=" < " onClick="oneClear()"></td>
-	<td><input type="button" class="key" value=" C " onClick="allClear()"></td>
+	<td><input type="button" class="key" value=" 0 " ontouchend="keyEvent('0')"></td>
+	<td><input type="button" class="key" value=" < " ontouchend="oneClear()"></td>
+	<td><input type="button" class="key" value=" C " ontouchend="allClear()"></td>
 </tr></table>
 
 </form>
