--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ div#result {text-align:center;font-size:40px;}
 div#number {text-align:center;font-size:40px;}
 form.myForm {visibility:hidden;}
 input.tx1 {font-family:monospace;font-size:40px;visibility:hidden;}
-input.key {text-align:center;width:100px;font-family:monospace;font-size:40px;}
+input.key {text-align:center;width:100px;font-family:monospace;font-size:40px;touch-action:manipulation;}
 input.non {text-align:center;width:35px;font-family:monospace;font-size:40px;visibility:hidden;}
 input.bar {width:100px;font-family:monospace;font-size:40px;}
 // --></style>
